RESOLVED FIXED137123
Race in ref pointer for WebVideoFullscreenInterfaceAVKit.
https://bugs.webkit.org/show_bug.cgi?id=137123
Summary Race in ref pointer for WebVideoFullscreenInterfaceAVKit.
Jeremy Jones
Reported 2014-09-25 12:05:31 PDT
Race in ref pointer for WebVideoFullscreenInterfaceAVKit.
Attachments
Patch (8.30 KB, patch)
2014-09-25 12:08 PDT, Jeremy Jones
no flags
Jeremy Jones
Comment 1 2014-09-25 12:08:47 PDT
Jeremy Jones
Comment 2 2014-09-25 12:09:46 PDT
WebKit Commit Bot
Comment 3 2014-09-25 13:35:57 PDT
Comment on attachment 238665 [details] Patch Clearing flags on attachment: 238665 Committed r173974: <http://trac.webkit.org/changeset/173974>
WebKit Commit Bot
Comment 4 2014-09-25 13:35:59 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 5 2014-11-15 23:38:50 PST
*** Bug 138744 has been marked as a duplicate of this bug. ***
Stuart Morgan
Comment 6 2014-11-17 06:23:26 PST
I know you can't comment on release dates, but I'd like to stress that this crash is a *huge* regression from iOS 7 (it's ~1/3 of all crashes in Chrome for iOS on iOS 8+), so if there's any chance of this making it into an 8.1.x that would be awesome for users.
Jon Lee
Comment 7 2014-11-20 09:04:38 PST
Note You need to log in before you can comment on or make changes to this bug.