Race in ref pointer for WebVideoFullscreenInterfaceAVKit. https://bugs.webkit.org/show_bug.cgi?id=137123

Patch by Jeremy Jones <jeremyj@apple.com> on 2014-09-25
Reviewed by Eric Carlson.

Add WebThreadRun to prevent race with RefPtr of WebVideoFullscreenInterfaceAVKit.

* platform/ios/WebVideoFullscreenControllerAVKit.mm:
(-[WebVideoFullscreenController didSetupFullscreen]): add WebThreadRun
* platform/ios/WebVideoFullscreenInterfaceAVKit.mm:
(WebVideoFullscreenInterfaceAVKit::setDuration): ditto
(WebVideoFullscreenInterfaceAVKit::setCurrentTime): ditto
(WebVideoFullscreenInterfaceAVKit::setRate): ditto
(WebVideoFullscreenInterfaceAVKit::setVideoDimensions): ditto
(WebVideoFullscreenInterfaceAVKit::setSeekableRanges): ditto
(WebVideoFullscreenInterfaceAVKit::setAudioMediaSelectionOptions): ditto
(WebVideoFullscreenInterfaceAVKit::setLegibleMediaSelectionOptions): ditto
(WebVideoFullscreenInterfaceAVKit::setExternalPlayback): ditto
(WebVideoFullscreenInterfaceAVKit::setupFullscreen): ditto
(WebVideoFullscreenInterfaceAVKit::enterFullscreen): ditto
(WebVideoFullscreenInterfaceAVKit::exitFullscreen): ditto
(WebVideoFullscreenInterfaceAVKit::cleanupFullscreen): ditto
(WebVideoFullscreenInterfaceAVKit::requestHideAndExitFullscreen): ditto

Canonical link: https://commits.webkit.org/154927@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173974 268f45cc-cd09-0410-ab3c-d52691b4dbfc